LayoutTests/css3/filters/resources/invalid-shader.vs
@@ -1,0 +1,2 @@
+This is not a real vertex shader. It is just invalid shader code.
+It is used to test that the filter is not drawn when the shader is invalid.
